Version 2.02.96 - 
================================
  Add missing pkg init --with-systemdsystemunitdir in configure.in (2.02.92).
  Fix division by zero if PV with zero PE count is used during vgcfgrestore.
  Add initial support for thin pool lvconvert.
  Fix lvrename for thin volumes (regression in for_each_sub_lv() 2.02.89).
  Fix up-convert when mirror activation is controled by volume_list and tags.
  Disallow snapshots of mirror segment type.
  Fix bug in cmirror that caused incorrect status info to print on some nodes.
  Remove statement that snapshots cannot be tagged from lvm man page.
  Disallow changing cluster attribute of VG while RAID LVs are active.
  Fix lvconvert error message for non-mergeable volumes.
  Allow subset of failed devices to be replaced in RAID LVs.
  Prevent resume from creating error devices that already exist from suspend.
  Improve clmvd singlenode locking for better testing.
  Update and correct lvs man page with supported column names.
  Handle replacement of an active device that goes missing with an error device.
  Change change raid1 segtype always to request a flush when suspending.
  Add udev info and context to lvmdump.
  Fix RAID device replacement code so that it works under snapshot.
  Fix inability to split RAID1 image while specifying a particular PV.
  Update man pages to give them same look&feel.
  Fix lvresize of thin pool for stipped devices.
  For lvresize round upward when specifying number of extents.
  For lvcreate with %FREE support rounding downward strip alignment.
  Change message severity to log_very_verbose for missing dev info in udev db.
  Fix problems when specifying PVs during RAID down-converts.
  Fix ability to handle failures in mirrored log (regression intro 2.02.89).
  Fix unlocking volume group in vgreduce in error path.
  Exit immediately if LISTEN_PID env var incorrect during systemd handover.
  Detect VG name being part of the LV name in lvconvert --splitmirrors -n.